...
            fontWeight = FontWeight.Bold,
            modifier = Modifier.weight(1f),
            textAlign = TextAlign.Center
        )

        // Botón editar
        IconButton(onClick = onEditClick, modifier = Modifier.testTag("BotonEditarPerfil")) {
            Icon(
                imageVector = Icons.Default.Edit,
                contentDescription = "Editar Perfil",
                tint = MaterialTheme.colorScheme.primary
            )
        }
...
                }
                Spacer(modifier = Modifier.height(8.dp))
                Text(
                    text = artista.usuario,
                    style = MaterialTheme.typography.titleLarge,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.testTag("TextNombre")
                )
                Text(
                    text = artista.profesion,
                    style = MaterialTheme.typography.bodyMedium,
                    color = MaterialTheme.colorScheme.onSurfaceVariant,
                    modifier = Modifier.testTag("TextProfesion")
...
                 ObraPressed: (String) -> Unit = {},
                 EditarPressed: () -> Unit = {},
                 LogOutPressed:()-> Unit = {},
                 EditarRPressed: (String) -> Unit ={},
                 SeguidoresPresed: (String)-> Unit ={},
                 SeguidosPresed: (String)-> Unit = {},
                 modifier: Modifier = Modifier.testTag("PerfilScreen")
) {

    val state by viewmodel.uiState.collectAsState()
    LaunchedEffect(Unit) {
        viewmodel.getUsuario(id)
      //  Log.d("User","Se encontro user")
...
