...
import kotlinx.coroutines.flow.filterNotNull

@Composable
fun PrincipalScreen( obraPressed: (String) -> Unit = {},
                     perfilPressed: (String)-> Unit = {},
    viewmodel: PrincipalViewModel,
    modifier: Modifier = Modifier.testTag("PrincipalScreen")
) {
    val state by viewmodel.uiState.collectAsState()
    val listState = rememberLazyListState()
    when{
        state.isLoading -> {
            Box(modifier = Modifier.fillMaxSize(), contentAlignment = Alignment.Center){
...
